--- a/package.json
+++ b/package.json
@@ -47,5 +47,10 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
+  },
+  "overrides": {
+    "qs": "^6.14.1",
+    "lodash": "^4.17.21",
+    "diff": "^5.2.0"
   }
 }
